--- a/config.env
+++ b/config.env
@@ -4,5 +4,5 @@ PASSWORD=
 DATABASE=hrms
 PORT=3000
 NODE_ENV=development
-IMAGE_URL=S:\hrms-Backend\uploads\
-NO_IMAGE = S:\hrms-Backend\utils\Assets\image\no-image.png
+IMAGE_URL=S:\HRMS\HrmsBackend\uploads\
+NO_IMAGE = S:\HRMS\HrmsBackend\utils\Assets\image\no-image.png
